# OliveTheory

./: .env.example  .gitignore  CLAUDE.md  README.md  bench.py  gemini_cli.py  pyproject.toml  xai_cli.py
.claude/: settings.local.json
.claude/skills/: research-paper-pointers.md  using-kimi-for-research.md
context/: methodology.html  researchplan.md
context/experiments/: 001_real_music_pressure_test.md  002_muller_temporal_dynamics.md
context/papers/: tribev2.txt
context/runningmodel/: setup.md
context/tribev2/: __init__.py  demo_utils.py  utils.py
context/tribev2/plotting/: base.py  cortical.py  cortical_pv.py  subcortical.py
directions/: directions.md  subcortical_training_plan.md
directions/construct-mapping/: README.md  escape_motivation_v2.md  measurement_framework.md
directions/construct-mapping/pointers/: muller_ruler_assessment.md  pedersen_aac_ddm_analysis.md
directions/ft-tribe-embeddings/: README.md
directions/ft-tribe-music/: README.md
directions/ft-tribe-music/pointers/: ds000113_studyforrest.md  real_music_test_status.md
directions/muser-recon/: README.md
directions/muser-recon/pointers/: emopia_assessment.md
directions/subcortical-audit/: README.md
directions/subcortical-audit/pointers/: audit_result.md  training_plan.md
experiments/: cifti_utils.py  subcortical_probe.py  test_temporal_dynamics.py
experiments/archive/: gen_real_stimuli.py  test_real_music.py  test_sensitivity.py
