[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "olivetheory"
version = "0.1.0"
description = "Brain encoding + music emotion research workspace"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Praneel Patel"}]

dependencies = [
  # tribev2 core
  "neuralset==0.0.2",
  "neuraltrain==0.0.2",
  "torch>=2.5.1,<2.7",
  "numpy==2.2.6",
  "torchvision>=0.20,<0.22",
  "x_transformers==1.27.20",
  "einops",
  "pyyaml",
  "moviepy>=2.2.1",
  "huggingface_hub",
  "gtts",
  "langdetect",
  "spacy",
  "soundfile",
  "Levenshtein",
  "julius",
  "transformers",
  # research CLIs
  "openai>=1.0.0",
  "google-genai>=1.0.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/PRAGA-maker/OliveTheory"

[project.optional-dependencies]
  plotting = [
    "nibabel",
    "matplotlib",
    "seaborn",
    "colorcet",
    "nilearn",
    "scipy",
    "pyvista",
    "scikit-image",
  ]
  training = [
    "nibabel",
    "torchmetrics",
    "wandb",
    "lightning",  
  ]
  test = [
    "pytest",
  ]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.setuptools.packages.find]
include = ["tribe*"]
